--- a/dotenv.env
+++ b/dotenv.env
@@ -1,3 +1,3 @@
 PORT=7000
 URL=https://turkcealtyazi-stremio-mycodelab.koyeb.app
-PROXY_URL=https://i7475726b6365616c7479617a69o6f7267z.oszar.com
+PROXY_URL=https://turkcealtyazi-dotorg.gateway.web.tr
