--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.22.0",
+    "chardet": "^2.0.0",
     "cheerio": "^1.0.0-rc.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
